...
                android:hint="Full Name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Full Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="52dp" />

        <!--Biography-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/biographyTil"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/biographyEt"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:hint="Biography"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Login Button-->
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit Changes"/>
<!--        <Button-->
<!--            android:id="@+id/logoutBtn"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Log Out"/>-->

    </LinearLayout>
...
