...
    android:padding="20dp"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Profile"/>

    <Button
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Password"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log out"/>



</LinearLayout>
