<resources>
    <string name="app_name">HomeShare</string>
    <string name="invitations">📩</string>
    <string name="settings">⚙</string>
    <string name="responses">Responses</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
...
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Description</string>
    <string name="_settings">Settings</string>
    <string name="_invitations">Invitations</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? <b>Register here.</b></string>
    <string name="login">Login</string>
    <string name="login_to_your_existing_account">Login to your existing account.</string>
    <string name="forgot_password">Forgot password? <b>Click here.</b></string>
    <string-array name="class_array">
        <item>freshman</item>
        <item>sophomore</item>
        <item>junior</item>
...
